--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 
 <app-header></app-header>
+
 <!-- Muestra el contenido de las rutas -->
 <router-outlet></router-outlet>
 
 <!-- Footer -->
-<footer>
+<!-- <footer>
   <p>© 2024 Mi Aplicación de Películas</p>
-</footer>
+</footer> -->
 
 <!-- Modal de Login, se abre solo si isModalOpen es true -->
 <app-login-modal *ngIf="isModalOpen" (close)="closeModal()"></app-login-modal>
