--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -66,19 +66,7 @@ nav a:hover {
   color: #1ef8af;
 }
 
-footer {
-  background-color: rgb(179, 80, 15);
-  text-align: center;
-  padding: 10px;
-  color: #ffffff;
-  border-top: 2px solid #002244;
-  font-size: 0.9em;
-}
 
-footer p {
-  margin: 0;
-  font-weight: 400;
-}
 
 @media (max-width: 600px) {
   header h1 {
@@ -117,16 +105,14 @@ footer p {
 }
 
 .user-info {
-  color: #feffff;
-  margin-top: 0px;
-  text-align: center;
+  text-align: center; /* Alinea el texto en el centro */
+  margin-top: 10px; /* Espacio entre el avatar y el texto */
 }
-
 .dividerUser {
   border: none;
   border-top: 2px solid #1ef8af;
   margin: 10px 0px;
-  width: 100%;
+  width: 110%;
 }
 
 .textPerfil {
@@ -136,5 +122,20 @@ footer p {
 }
 
 .opciones-user {
-  padding-top: 10px;
+  display: flex;
+  align-items: center; /* Centra verticalmente */
+  justify-content: center; /* Centra horizontalmente */
+  flex-direction: column; /* Apila los elementos verticalmente */
+  padding: 10px; /* Ajusta el padding según sea necesario */
+}
+
+.user-name{
+ text-align: center;
+ color: white;
+}
+
+.avatar {
+  height: 90px;
+  width: 90px;
+  padding: 0; /* Elimina el padding para centrar mejor */
 }
