--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,8 +1,9 @@
 <div *ngIf="movie" class="movie-details" [ngStyle]="{'background-image': 'url(https://image.tmdb.org/t/p/original' + movie.backdrop_path + ')'}">
   <h2>{{ movie.title }}</h2>
   <div class="main-content">
-    <img [src]="'https://image.tmdb.org/t/p/original' + movie.poster_path" [alt]="movie.title" class="poster-image">
-    <div class="button-container">
+    <img
+    [src]="'https://image.tmdb.org/t/p/original' + movie.poster_path" [alt]="movie.title" class="poster-image" (error)="onImageError($event)">
+        <div class="button-container">
       <button (click)="verSinopsis()" id="sinopsis">Ver Sinopsis</button>
       <button id="comprarEntrada">Comprar Entrada</button>
       <button id="verTrailer" *ngIf="trailerUrl" (click)="openTrailer()">Ver Trailer</button>
@@ -16,30 +17,42 @@
       </div>
     </div>
 
-
-  <div class="thumbnail-button-container">
-    <div class="thumbnail-container">
-      <img *ngFor="let backdrop of backdrops" [src]="backdrop" class="thumbnail" (click)="openImage(backdrop)">
-    </div>
-  </div>
-
-  <!-- Contenedor para la imagen ampliada -->
-  <div *ngIf="selectedImage" class="overlay" (click)="closeImage()">
-    <img [src]="selectedImage" class="enlarged-image">
-  </div>
-
-<!-- Modal para mostrar la sinopsis -->
-<div *ngIf="showSynopsisModal" class="modal-overlay" (click)="closeSynopsisModal()">
-  <div class="modal-content" (click)="$event.stopPropagation()">
-    <h3>Sinopsis</h3>
-    <div class="actors-container">
-      <div *ngFor="let actor of actors" class="actor-card" (click)="goToActorMovies(actor.id)">
-        <!-- Aquí el actor es un enlace que redirige a la ruta de sus películas -->
-        <img *ngIf="actor.profile_path" [src]="'https://image.tmdb.org/t/p/w500' + actor.profile_path" [alt]="actor.name">
-        <p class="actor-name">{{ actor.name }}</p>
+    <div class="thumbnail-button-container">
+      <div class="thumbnail-container">
+        <img *ngFor="let backdrop of backdrops" [src]="backdrop" class="thumbnail" (click)="openImage(backdrop)">
       </div>
     </div>
-    <p>{{ movie.overview }}</p>
-    <button (click)="closeSynopsisModal()">Cerrar</button>
+
+    <!-- Contenedor para la imagen ampliada -->
+    <div *ngIf="selectedImage" class="overlay" (click)="closeImage()">
+      <img [src]="selectedImage" class="enlarged-image">
+    </div>
+
+    <!-- Modal para mostrar el trailer -->
+    <div *ngIf="showTrailerModal" class="modal-overlay-trailer" (click)="closeTrailerModal()">
+      <div class="modal-content-trailer" (click)="$event.stopPropagation()">
+        <iframe [src]="selectedTrailerUrl" frameborder="0" allowfullscreen></iframe>
+        <button class="trailer-button" (click)="closeTrailerModal()">Cerrar</button>
+      </div>
+    </div>
+
+    <!-- Modal para mostrar la sinopsis -->
+    <div *ngIf="showSynopsisModal" class="modal-overlay" (click)="closeSynopsisModal()">
+      <div class="modal-content" (click)="$event.stopPropagation()">
+        <h3>Sinopsis</h3>
+        <div class="actors-container">
+         <div *ngFor="let actor of actors" class="actor-card" (click)="goToActorMovies(actor.id)">
+            <!-- Aquí el actor es un enlace que redirige a la ruta de sus películas -->
+            <img *ngIf="actor.profile_path" [src]="'https://image.tmdb.org/t/p/original' + actor.profile_path" [alt]="actor.name">
+            <p class="actor-name">{{ actor.name }}</p>
+            <hr class="divider-actor">
+            <p class="actor-character">{{ actor.character }}</p>
+          </div>
+        </div>
+        <p>{{ movie.overview }}</p>
+        <p>{{ "Fecha de estreno: " + movie.release_date }}</p>
+        <button (click)="closeSynopsisModal()">Cerrar</button>
+      </div>
+    </div>
   </div>
 </div>
