--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,7 +1,7 @@
 <section class="movie-container">
 
   <div *ngFor="let movie of movies" class="movie-card" (click)="goToMovieDetails(movie.id)">
-    <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" [alt]="movie.title">
+    <img [src]="'https://image.tmdb.org/t/p/w500' + movie.poster_path" [alt]="movie.title" class="poster-image" (error)="onImageError($event)">
     <div class="title-container">
       <h1>{{ movie.title }}</h1>
     </div>
