--- a/src/app/formulario-registro/formulario-registro.component.css
+++ b/src/app/formulario-registro/formulario-registro.component.css
@@ -39,3 +39,22 @@ button {
 button:hover {
   background-color: #218838;
 }
+
+
+.avatar-options {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+.avatar-options img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.avatar-options img:hover {
+  transform: scale(1.1);
+}
