--- a/src/app/login-modal/login-modal.component.html
+++ b/src/app/login-modal/login-modal.component.html
@@ -10,7 +10,8 @@
 
     <button type="submit" [disabled]="!inicioForm.valid">Iniciar Sesión</button>
   </form>
-  <button (click)="isLogin = false">Registrar</button> <!-- Asegúrate de que este botón llama a onRegister -->
+  <br>
+  <button class="btn-registar" (click)="isLogin = false">Registrar</button> <!-- Asegúrate de que este botón llama a onRegister -->
 </div>
 
 <ng-template #isRegister>
@@ -34,7 +35,19 @@
           <label for="saldo">Saldo Inicial:</label>
           <input type="number" id="saldo" formControlName="saldo" required>
         </div>
-        <button type="submit" [disabled]="registroForm.invalid">Registrar</button>
+        <div>
+          <h3>Selecciona un Avatar</h3>
+            <div class="avatar-container">
+              <img class="avatar" src="https://img.icons8.com/?size=512&id=12268&format=png" alt="Avatar 1" (click)="setAvatar('https://img.icons8.com/?size=512&id=12268&format=png')">
+              <img class="avatar" src="https://img.icons8.com/?size=512&id=38038&format=png" alt="Avatar 2" (click)="setAvatar('https://img.icons8.com/?size=512&id=38038&format=png')">
+              <img class="avatar" src="https://img.icons8.com/color/600/spiderman-head.png" alt="Avatar 3" (click)="setAvatar('https://img.icons8.com/color/600/spiderman-head.png')">
+              <img class="avatar" src="https://cdn0.iconfinder.com/data/icons/famous-character-vol-1-colored/48/JD-09-512.png" alt="Avatar 4" (click)="setAvatar('https://cdn0.iconfinder.com/data/icons/famous-character-vol-1-colored/48/JD-09-512.png')">
+              <img class="avatar" src="https://cdn0.iconfinder.com/data/icons/famous-character-vol-1-colored/48/JD-11-512.png" alt="Avatar 5" (click)="setAvatar('https://cdn0.iconfinder.com/data/icons/famous-character-vol-1-colored/48/JD-11-512.png')">
+              <img class="avatar" src="https://icons.veryicon.com/png/o/avatar/superhero-marvel/thanos.png" alt="Avatar 6" (click)="setAvatar('https://icons.veryicon.com/png/o/avatar/superhero-marvel/thanos.png')">
+            </div>
+
+        </div>
+        <button type="submit" [disabled]="registroForm.invalid">Aceptar</button>
       </form>
     </div>
   </div>
