--- a/src/app/login-modal/login-modal.component.html
+++ b/src/app/login-modal/login-modal.component.html
@@ -47,7 +47,7 @@
             </div>
 
         </div>
-        <button type="submit" [disabled]="registroForm.invalid">Aceptar</button>
+        <button type="submit" class="btn-aceptar" [disabled]="registroForm.invalid">Aceptar</button>
       </form>
     </div>
   </div>
