añadido componente myList, agregar y eliminar favoritos

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,7 +30,7 @@
         <p class="user-name">Bienvenido, {{ userName }}</p>
       </div>
       <hr class="dividerUser">
-      <a routerLink="/tienda" routerLinkActive="active"><i class="fa-solid fa-clapperboard"></i> Mi lista</a>
+      <a routerLink="/myList" routerLinkActive="active"><i class="fa-solid fa-clapperboard"></i> Mi lista</a>
       <hr class="dividerUser">
       <a routerLink="/top250" routerLinkActive="active"><i class="fa-solid fa-trophy"></i> Top 250</a>
       <hr class="dividerUser">
