--- a/src/app/my-list/my-list.component.html
+++ b/src/app/my-list/my-list.component.html
@@ -1,1 +1,13 @@
-<p>my-list works!</p>
+<div *ngIf="favoriteMovies.length > 0; else noFavorites">
+  <h2>Mis Películas Favoritas</h2>
+  <div *ngFor="let movie of favoriteMovies" class="favorite-movie">
+    <h3>{{ movie.title }}</h3>
+    <img [src]="'https://image.tmdb.org/t/p/original' + movie.poster_path" [alt]="movie.title">
+    <button (click)="removeFromFavorites(movie)">Eliminar de favoritos</button>
+  </div>
+</div>
+
+<ng-template #noFavorites>
+  <h2 class="noFavoritos">La lista está vacía...</h2>
+  <button (click)="goToHome()" class="back-button">Volver al menú principal</button>
+</ng-template>
