--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -40,7 +40,7 @@
   font-size: 30px;
   font-family: 'Orbitron', sans-serif;
   font-weight: 700;
-  color: #1ef8af;
+  color: #ee850d;
 }
 
 /* Título del formulario */
