--- a/src/app/my-list/my-list.component.css
+++ b/src/app/my-list/my-list.component.css
@@ -1,13 +1,30 @@
-/* Fondo general para el contenedor de películas favoritas */
+/* Contenedor de fondo general para las películas favoritas */
+.favorite-movies-background {
+  background-image: url('wallpaper.jpg'); /* Fondo general */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 20px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+/* Contenedor de películas favoritas dentro del fondo general */
 .favorite-movie-container {
-  padding-left: 25px;
-  padding-right: 25px;
-  padding-bottom: 20px;
+  padding: 25px;
+  background-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */
+  border-radius: 12px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 10px;
   row-gap: 15px;
-  min-height: 90vh;  /* Define una altura mínima del contenedor */
+  min-width: 80%; /* Ajusta al 80% del ancho del contenedor principal */
+  max-width: 1200px;
+  margin: 0 auto;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
 }
 
 /* Estilos para las tarjetas de películas favoritas */
@@ -36,11 +53,14 @@
   background-color: #ee850d;
   color: white;
   border: none;
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 5px 15px;
+  font-size: 14px;
   border-radius: 5px;
   cursor: pointer;
-  margin-top: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  transition: background-color 0.3s ease;
 }
 
 .remove-btn:hover {
@@ -55,12 +75,12 @@ h3 {
 /* Estilos para el mensaje cuando no hay favoritos */
 .noFavoritesMessage {
   font-size: 24px;
-  color: rgb(178 25 25);
+  color: rgb(178, 25, 25);
   text-align: center;
   margin-top: 30px;
 }
 
-/* Estilos para el botón que debe ser flotante */
+/* Estilos para el botón de regreso */
 .back-button {
   position: fixed;
   bottom: 20px;
