--- a/src/app/top250-movies/top250-movies.component.css
+++ b/src/app/top250-movies/top250-movies.component.css
@@ -1,20 +1,15 @@
 /* Fondo general para el contenedor de películas */
 .movie-container {
-  /* background-image: url('wallpaper.jpg');
+   /* background-image: url('wallpaper.jpg');
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat; */
-  background-color: #332f2f;
-  padding-left: 245px;
-  padding-right: 30px;
+  background-repeat: repeat;
+  background-color: #332f2f; */
+  padding-left: 90px;
+  padding-right: 20px;
   padding-top: 15px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
-  gap: 15px;
-  row-gap: 15px;
-  min-height: 100vh;
-  justify-items: center;
-  position: relative;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  column-gap: 6px;
 }
 
 .movie-card {
@@ -27,9 +22,8 @@
 }
 
 .movie-card img {
-  width: 250px;
-  height: 99%;
-  max-width: 100%;
+  width: 265px;
+  height: 390px;
   border: 2px solid #ffffff;
   border-radius: 8px;
   box-shadow: 2px 10px 6px rgba(0, 0, 0, 0.8);
