--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* Asegura que el body ocupe toda la pantalla y usa flexbox para su contenido */
 body, html {
   height: 100%;
-  margin: 0;
+  margin: 0.02px;
   background-color:#242729;
   display: flex;
   flex-direction: column;
